# liaf-automations

./: google_sheets.py  mailchimp.py  main.py  pyproject.toml  settings.py  slack.py  teachable_webhooks.py  twitter.py
